--- a/home.html
+++ b/home.html
@@ -86,6 +86,15 @@
             document.body.innerHTML = "<h2>Thank you for participating!</h2>";
         }
 
+        document.getElementById("music").addEventListener("play", function() {
+            tensionData = [];
+            if (experimentInterval === null) {
+                experimentInterval = setInterval(() => {
+                    tensionData.push(document.getElementById("tensionSlider").value);
+                }, 500);
+            }
+        });
+
         document.getElementById("music").addEventListener("ended", saveAndRedirect);
         
         document.getElementById("finishExperiment").addEventListener("click", saveAndRedirect);
