--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                 <p>"If a lion could talk, we could not understand him."</p>
                 <p>"Don't think, but look!"</p>
             </div>
-            
+
         </div>
 
         <div id="experimentPage" class="hidden">
@@ -212,7 +212,12 @@
                     console.log("data");
                     console.log(data);
                     data.forEach(entry => {
-                        csvContent += `"${entry.name}","${entry.email}","${entry.phone}","${entry.tensionData.join(", ")}"\n`;
+                        if (entry.name && entry.email && entry.phone) {
+                            csvContent += `"${entry.name}","${entry.email}","${entry.phone}","${Array.isArray(entry.tensionData) ? entry.tensionData.join(", ") : "No Data"}"\n`;
+                        } else {
+                            console.warn("Skipping invalid row:", entry);
+                        }
+                        
                     });
                     let blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
                     let link = document.createElement("a");
