--- a/home.html
+++ b/home.html
@@ -246,6 +246,7 @@
           <th>Question 8</th>
           <th>Main Tension Data</th>
           <th>Heard Before</th>
+          <th>Timestamp</th> <!-- ADD THIS -->
         </tr>
       </thead>
       <tbody></tbody>
@@ -415,9 +416,9 @@ $("#downloadCSV").click(() => {
         cache: false,
         headers: { "Cache-Control": "no-cache, no-store, must-revalidate" },
         success: function(data) {
-            let csvContent = "Question1,Question2,Question3,Question4,Question5,Question6,Question7,Question8,Main Tension Data,Heard Before\n";
+            let csvContent = "Question1,Question2,Question3,Question4,Question5,Question6,Question7,Question8,Main Tension Data,Heard Before,Timestamp\n";
             data.forEach(entry => {
-                csvContent += `"${entry.question1 || ""}","${entry.question2 || ""}","${entry.question3 || ""}","${entry.question4 || ""}","${entry.question5 || ""}","${entry.question6 || ""}","${entry.question7 || ""}","${entry.question8 || ""}","${Array.isArray(entry.mainTensionData) ? entry.mainTensionData.join(", ") : ""}","${entry.heardBefore || ""}"\n`;
+                csvContent += `"${entry.question1 || ""}","${entry.question2 || ""}","${entry.question3 || ""}","${entry.question4 || ""}","${entry.question5 || ""}","${entry.question6 || ""}","${entry.question7 || ""}","${entry.question8 || ""}","${Array.isArray(entry.mainTensionData) ? entry.mainTensionData.join(", ") : ""}","${entry.heardBefore || ""}","${entry.timestamp || ""}"\n`;
             });
             let blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
             let link = document.createElement("a");
