--- a/home.html
+++ b/home.html
@@ -233,24 +233,26 @@
   <!-- RESULTS PAGE -->
   <div id="resultsPage" class="hidden">
     <h2>Experiment Results</h2>
-    <table id="resultsTable" class="display nowrap" style="width:100%">
-      <thead>
-        <tr>
-          <th>Question 1</th>
-          <th>Question 2</th>
-          <th>Question 3</th>
-          <th>Question 4</th>
-          <th>Question 5</th>
-          <th>Question 6</th>
-          <th>Question 7</th>
-          <th>Question 8</th>
-          <th>Main Tension Data</th>
-          <th>Heard Before</th>
-          <th>Timestamp</th> <!-- ADD THIS -->
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div style="overflow-x:auto;">
+      <table id="resultsTable" class="display nowrap" style="width:100%">
+        <thead>
+          <tr>
+            <th>Question 1</th>
+            <th>Question 2</th>
+            <th>Question 3</th>
+            <th>Question 4</th>
+            <th>Question 5</th>
+            <th>Question 6</th>
+            <th>Question 7</th>
+            <th>Question 8</th>
+            <th>Main Tension Data</th>
+            <th>Heard Before</th>
+            <th>Timestamp</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
     <button id="downloadCSV" class="btn btn-secondary mt-3">Download CSV</button>
     <button id="backButtonResults" class="btn btn-primary mt-3">Back</button>
   </div>
